Implement 'availability' method in reactive way